修改组件样式

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -2,7 +2,7 @@
   "nav": {
     "shoppingLists": "Shopping Lists",
     "familyGroups": "Family Groups",
-    "profile": "Profile",
+    "invitations": "Friends Invitations",
     "summary": "Summary"
   },
   "auth": {
