--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -3,6 +3,7 @@
     "shoppingLists": "购物清单",
     "familyGroups": "家庭群组",
     "profile": "个人资料",
+    "invitations": "好友邀请",
     "summary": "汇总"
   },
   "auth": {
